5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1582_2896.log
== SUBMITION (2019-03-26 16:22:08) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome")

# Impressao de saidas
print(input)
-- EXECUTION TIME:
0.120027
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
digite o nome<built-in function input>
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
digite o nome<built-in function input>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:22:47) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome")

# Impressao de saidas
print(Python)
-- EXECUTION TIME:
0.146648
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:26:12) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:26:22) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.13094
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:14:21) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:15:01) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome;    ")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:15:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome;    ")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
